--- a/css/global.css
+++ b/css/global.css
@@ -25,3 +25,7 @@
 .custom-scrollbar::-webkit-scrollbar-thumb:active {
   background-color: rgba(0, 0, 0, 0.6);
 }
+
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
